syntax = "proto3";

package rpc.v1;

import "rpc/v1/amount.proto";

// A class encompassing all transactions.
message Transaction {
    // The account originating the transaction.
    string account = 1;

    // The fee attached to the transaction.
    XRPAmount fee = 2;

    // The sequence number for the transaction.
    uint32 sequence = 3;

    // Data specific to a the type of transaction being submitted.
    oneof transaction_data {
        Payment payment = 4;
    }

    // The public key of the account which signed the transaction in hexadecimal.
    bytes signing_public_key_hex = 5;

    bytes signature = 6;

    uint32 flags = 7;

    uint32 last_ledger_sequence = 8;
    
    repeated Path paths = 9;

    CurrencyAmount send_max = 10;
}

message Path {

    repeated PathElement elements = 1;
}

message PathElement {

    string account = 1;

    string currency = 2;

    string issuer = 3;
}

message Payment {
    // The amount of currency to pay, in either fiat or XRP.
    CurrencyAmount amount = 1;

    // The destination of the payment.
    string destination = 3;
}
